# korML

./: pyproject.toml
src/: __init__.py
src/activation/: __init__.py  base.py  linear.py  relu.py  sigmoid.py  softmax.py
src/classification/: __init__.py  soft_max_X_categorical_cross.py
src/datasets/: helper.py
src/korML.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/layer/: __init__.py  base.py  dense.py  dropout.py  input.py
src/loss/: __init__.py  base.py  binary_cross_entropy.py  categorical_cross_entropy.py  mean_absolute_error.py  mean_squared_error.py
src/model/: __init__.py  model.py
src/model/accuracy/: __init__.py  base.py  categorical.py  regression.py
src/optimizer/: __init__.py  ada_grad.py  adam.py  base.py  rms_prop.py  stochastic_gradient_descent.py
